Changing the textlabel in code.

--- a/GitHubWorkflowDemo/GitHubWorkflowDemo/Base.lproj/Main.storyboard
+++ b/GitHubWorkflowDemo/GitHubWorkflowDemo/Base.lproj/Main.storyboard
@@ -39,6 +39,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="textLabel" destination="Mf3-4m-fIa" id="ep1-yR-3zm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
